[package]
name = "leptos_daisy_ui_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text-input"]
text-input = ["leptos_daisy_ui_macros/text-input"]

[dependencies]
const_format = { version = "0.2", features = ["fmt"] }
getrandom = { version = "0.2", features = ["js"] }
leptos = "0.2"
leptos_daisy_ui_macros = { path = "../macros" }
leptos_tea = { git = "https://github.com/jquesada2016/leptos-tea" }
rand = "0.8"