[package]
name = "leptos_daisyui_components"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["text-input"]
text-input = ["leptos_daisyui_macros/text-input"]

[dependencies]
const_format = "0.2"
getrandom = { version = "0.2", features = ["js"] }
js-sys = "0.3"
leptos = "0.5.0-beta"
leptos_daisyui_macros = { path = "../macros" }
leptos_tea = "0.6.0-beta"
rand = "0.8"
wasm-bindgen = "0.2"
web-sys = "0.3"
