[package]
name = "leptos_daisy_ui_macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = ["button", "text-input"]
text-input = []
button = []

[dependencies]
proc-macro2 = "1"
proc-macro-error = "1"